styles/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

.inter-fonts {
  font-family: "Inter", sans-serif;
}

/* shared styles */
.container {
    max-width: 75rem;
    margin: 0 auto;
}
.display-flex {
    display: flex;
}
.bg-dark {
    background-color: #1A0B2E;
}
.bg-light {
    background-color: #230E3D;
}
.text-white {
    color: #FFFFFF;
}
.btn {
    background-image: linear-gradient(to top right, #F7E93F, #FB09B4, #9100F8);
    padding: 0.8rem 1rem;
    font-size: 1rem;
    font-weight: 600;
    color: #FFFFFF;
    cursor: pointer;
    border: none;
    border-radius: 10000px;
    transition: transform 1s;
}
.btn:hover {
    transform: scale(1.2);
    background-image: linear-gradient(to top right, #f7e83f98, #fb09b298, #9100f898);
}
.btn2 {
    background-color: transparent;
    padding: 0.8rem 1rem;
    font-size: 1rem;
    font-weight: 600;
    color: #00FF88;
    cursor: pointer;
    border: 1px solid #00FF88;
    border-radius: 10000px;
    transition: transform 1s;
}
.btn2:hover {
    transform: scale(1.2);
    background-color: #00ff888c;
    color: #FFFFFF;
}
.text-center {
    text-align: center;
}

/* main styles */
/* navbar styles */
nav {
    justify-content: space-between;
    padding-top: 1.5rem;
    padding-bottom: 1.5rem;
}
nav img {
    width: 13rem;
    height: 2rem;
    cursor: pointer;
}
.nav-menu {
    justify-content: space-between;
    gap: 2rem;
    align-items: center;
    list-style: none;
}
.nav-menu a {
    text-decoration: none;
    font-size: 1rem;
}
.hamburger-menu {
    display: none;
}


/* hero styles */
.hero-container {
    background-image: url('../assets/hero-bg.png');
    background-repeat: no-repeat;
    background-position:center;
    background-size: cover;
    height: 90vh;
}
.hero-top {
    max-width: 21rem;
    max-height: 21rem;
    margin: 0 auto;
    padding-top: 40px;
    padding-bottom: 80px;
}
.hero-top {
    position: relative;
}
.hero-top-button {
    position: absolute;
    top: 20%;
    left: 80%;
    background-color: #00FF88;
    color: #000000;
}
@keyframes rotation {
    from {
        transform: rotate(0deg);
    }
    to {
        transform: rotate(359deg);
    }
}
.hero-top-image {
    height: 345px;
    width: 345px;
    background-image: url('../assets/hero-circle.png');
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
}
.hero-mic {
    position: absolute;
    top: 30%;
    left: 30%;
    animation: rotation 8s infinite linear;
    cursor: pointer;
}
.hero-bottom {
    margin-top: 8%;
}
.hero-title {
    font-size: 3.5rem;
    font-weight: 800;
    margin-bottom: 8px;
}
.hero-desc {
    font-size: 1rem;
    margin-bottom: 1.6rem;
    color: #ffffff99;
}
.hero-button {
    justify-content: center;
    gap: 20px;
}
.spotify-btn {
    align-items: center;
    gap: 5px;
}

/* about styles */
.about-container {
    padding-top: 8%;
}
.about-title {
    font-size: 2.5rem;
    font-weight: 700;
    margin-bottom: 1rem;
}
.about-desc, .about-desc2 {
    font-size: 1rem;
    line-height: 20px;
    color: #ffffff99;
}
.about-desc2 {
    padding-bottom: 5rem;
}
.about-hr {
    height: 0.1px;
    background-color: #ffffff1b;
    border: none;
}
.about-card-container {
    justify-content: space-between;
    padding-top: 4rem;
    padding-bottom: 7rem;
}
.about-card-title {
    font-size: 3rem;
    font-weight: 700;
    color: #00FF88;
}
.about-card-desc {
    font-size: 1rem;
    font-weight: 300;
    line-height: 20px;
    opacity: 80%;
}

/* choose techwave styles */
.techwave-container {
    padding-bottom: 7rem;
}
.techwave-title {
    font-size: 2.5rem;
    font-weight: 700;
    padding-top: 7rem;
    padding-bottom: 3rem;
}
.techwave-card1, .techwave-card2, .techwave-card3, .techwave-card4, .techwave-card5, .host-card {
    background-color: rgba(53, 17, 101, 0.4);
    border: none;
    border-radius: 40px;
    padding: 40px;
    cursor: pointer;
    transition: transform 1s;
}
.techwave-card1:hover, .techwave-card2:hover, .techwave-card3:hover, .techwave-card4:hover, .techwave-card5:hover {
    transform: translateY(-20px);
    background-color: rgba(53, 17, 101, 0.8);
}
.techwave-card-title, .host-card-title {
    font-size: 1.4rem;
    font-weight: 700;
    color: #FFFFFF;
    margin-top: 16px;
    margin-bottom: 16px;
}
.techwave-card-desc, .host-card-desc {
    font-size: 1rem;
    line-height: 24px;
    color: #ffffff99;
}
.techwave-card1 {
    grid-area: card1;
    align-content: center;
}
.techwave-card2 {
    grid-area: card2;
    align-content: center;
}
.techwave-card3 {
    grid-area: card3;
    align-content: center;
}
.techwave-card4 {
    grid-area: card4;
    align-content: center;
}
.techwave-card5 {
    grid-area: card5;
    align-content: center;
}
.techwave-card-container {
    display: grid;
    gap: 30px;
    grid-template-areas: 
        "card1 card2 card2"
        "card1 card3 card3"
        "card4 card4 card5"
    ;
}


/* feature styles */
.feature-card-container {
    justify-content: space-between;
    gap: 1.5rem;
    padding-bottom: 4rem;
}
.feature-card {
    background-color: #250D44;
    border: none;
    border-radius: 20px;
    max-width: 380px;
}
.feature-card iframe {
    border: none;
    border-radius: 20px 20px 0 0;
}
.card-bottom {
    padding: 24px;
}
.feature-card-title {
    font-size: 1.2rem;
    font-weight: 700;
    padding-top: 0.4rem;
    padding-bottom: 0.8rem;
}
.feature-card-desc {
    font-size: 1rem;
    line-height: 24px;
    color: #ffffff99;
    padding-bottom: 12px;
}
.feature-card-footer-para1, .feature-card-footer-para2, .feature-card-footer-para3 {
    font-size: 1rem;
    font-weight: 600;
    color: #00FF88;
    align-items: center;
    gap: 10px;
    margin-bottom: 20px;
    margin-top: 10px;
}
.feature-card-footer-para1, .feature-card-footer-para3 {
    margin-top: 30px;
}

/* host styles */
.host-container {
    padding-bottom: 7rem;
}
.host-card {
    gap: 34px;
}
/* ... */

